Fix regression: Input color on dark mode

--- a/public/scss/normalize.scss
+++ b/public/scss/normalize.scss
@@ -7,6 +7,7 @@ button,
 input,
 select,
 textarea {
+    color: inherit;
     font: inherit;
     appearance: none;
     background: none;
