--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -26,7 +26,6 @@ button {
 input[type="text"],
 select,
 textarea {
-    color: inherit;
     padding: 10px;
     border: 2px solid #999;
     border-radius: 8px;
